add page loader, process non-existent routes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "language": "English",
-  "mainPage": "Main page",
-  "aboutTheSite": "About the site"
+  "mainPage": "Main",
+  "aboutTheSite": "About Us",
+  "notFoundPage": "Not found page"
 }
