--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2,5 +2,7 @@
   "language": "Русский",
   "mainPage": "Главная",
   "aboutTheSite": "О сайте",
-  "notFoundPage": "Страница не найдена"
+  "notFoundPage": "Страница не найдена",
+  "errorPage": "Упс! Что-то пошло не так...",
+  "refreshPage": "Обновить страницу"
 }
