add visual tool, fix screens, update sidebar

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -1,5 +1,6 @@
 {
   "language": "English",
+  "shortLanguage": "En",
   "mainPage": "Main",
   "aboutTheSite": "About Us",
   "notFoundPage": "Not found page",
