--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -5,5 +5,6 @@
   "aboutTheSite": "About Us",
   "notFoundPage": "Not found page",
   "errorPage": "Oops! Something went wrong...",
-  "refreshPage": "Refresh the page"
+  "refreshPage": "Refresh the page",
+  "login": "Login"
 }
