--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -5,5 +5,6 @@
   "aboutTheSite": "О сайте",
   "notFoundPage": "Страница не найдена",
   "errorPage": "Упс! Что-то пошло не так...",
-  "refreshPage": "Обновить страницу"
+  "refreshPage": "Обновить страницу",
+  "login": "Войти"
 }
