add input, login form, setup redux

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,5 +6,7 @@
   "notFoundPage": "Not found page",
   "errorPage": "Oops! Something went wrong...",
   "refreshPage": "Refresh the page",
-  "login": "Login"
+  "login": "Login",
+  "username": "Username",
+  "password": "Password"
 }
