--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -6,5 +6,7 @@
   "notFoundPage": "Страница не найдена",
   "errorPage": "Упс! Что-то пошло не так...",
   "refreshPage": "Обновить страницу",
-  "login": "Войти"
+  "login": "Войти",
+  "username": "Имя пользователя",
+  "password": "Пароль"
 }
