--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -7,6 +7,7 @@
   "errorPage": "Упс! Что-то пошло не так...",
   "refreshPage": "Обновить страницу",
   "login": "Войти",
+  "logout": "Выйти",
   "username": "Имя пользователя",
   "password": "Пароль"
 }
