--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -7,6 +7,7 @@
   "errorPage": "Oops! Something went wrong...",
   "refreshPage": "Refresh the page",
   "login": "Login",
+  "logout": "Logout",
   "username": "Username",
   "password": "Password"
 }
