add ts strict mode, profile pages

--- a/public/locales/en/auth.json
+++ b/public/locales/en/auth.json
@@ -1,4 +1,6 @@
 {
+  "username": "Username",
+  "password": "Password",
   "authForm": "Authorization form",
   "authError": "Wrong login or password"
 }
