--- a/public/locales/ru/auth.json
+++ b/public/locales/ru/auth.json
@@ -1,4 +1,6 @@
 {
+  "username": "Имя пользователя",
+  "password": "Пароль",
   "authForm": "Форма авторизации",
   "authError": "Неверный логин или пароль"
 }
