--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -3,5 +3,15 @@
   "profileUser": "Профиль пользователя",
   "firstName": "Ваше имя",
   "lastName": "Ваша фамилия",
-  "edit": "Редактировать"
+  "age": "Возврат",
+  "currency": "Валюта",
+  "country": "Страна",
+  "city": "Город",
+  "username": "Пользователь",
+  "avatar": "Аватар",
+  "edit": "Редактировать",
+  "profileError": "Произошла ошибка при загрузке профиля",
+  "refreshPage": "Пожалуйста, попробуйте обновить страницу",
+  "cancel": "Отменить",
+  "save": "Сохранить"
 }
