--- a/public/locales/ru/profile.json
+++ b/public/locales/ru/profile.json
@@ -13,5 +13,11 @@
   "profileError": "Произошла ошибка при загрузке профиля",
   "refreshPage": "Пожалуйста, попробуйте обновить страницу",
   "cancel": "Отменить",
-  "save": "Сохранить"
+  "save": "Сохранить",
+  "incorrectUserData": "Некорректные данные пользователя",
+  "incorrectAge": "Некорректный возврат",
+  "incorrectCity": "Некорректный город",
+  "incorrectCountry": "Некорректный регион",
+  "serverError": "Произошла ошибка при сохранении профиля",
+  "noData": "Данные не указаны"
 }
