add comment list

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -2,5 +2,7 @@
   "articlesPage": "Articles page",
   "articleDetailsPage": "Article details",
   "articleNotFound": "Ops! Article not found...",
-  "articleError": "The article is outdated, has been deleted or does not exist at all."
+  "articleError": "The article is outdated, has been deleted or does not exist at all.",
+  "comments": "Comments",
+  "noComments": "No comments"
 }
