--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -2,5 +2,7 @@
   "articlesPage": "Страница статей",
   "articleDetailsPage": "Подробности статьи",
   "articleNotFound": "Ой! Статья не найдена...",
-  "articleError": "Статья устарела, была удалена или не существовала вовсе."
+  "articleError": "Статья устарела, была удалена или не существовала вовсе.",
+  "comments": "Комментарии",
+  "noComments": "Комментарии отсутствуют"
 }
