--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -4,5 +4,7 @@
   "articleNotFound": "Ой! Статья не найдена...",
   "articleError": "Статья устарела, была удалена или не существовала вовсе.",
   "comments": "Комментарии",
-  "noComments": "Комментарии отсутствуют"
+  "noComments": "Комментарии отсутствуют",
+  "textComment": "Введите текст комментария",
+  "send": "Отправить"
 }
