add article list, skeleton and stories

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -6,5 +6,7 @@
   "comments": "Comments",
   "noComments": "No comments",
   "textComment": "Enter comment text",
-  "send": "Send"
+  "send": "Send",
+  "read": "Read more...",
+  "back": "Back"
 }
