--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -6,5 +6,7 @@
   "comments": "Комментарии",
   "noComments": "Комментарии отсутствуют",
   "textComment": "Введите текст комментария",
-  "send": "Отправить"
+  "send": "Отправить",
+  "read": "Читать далее...",
+  "back": "Назад"
 }
