add fetching articles, article view switcher

--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -3,6 +3,8 @@
   "articleDetailsPage": "Подробности статьи",
   "articleNotFound": "Ой! Статья не найдена...",
   "articleError": "Статья устарела, была удалена или не существовала вовсе.",
+  "failedLoadArticles": "Ой! Не удалось загрузить статьи...",
+  "articlesPageError": "Проверьте подключение к сети.",
   "comments": "Комментарии",
   "noComments": "Комментарии отсутствуют",
   "textComment": "Введите текст комментария",
