--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -3,6 +3,8 @@
   "articleDetailsPage": "Article details",
   "articleNotFound": "Ops! Article not found...",
   "articleError": "The article is outdated, has been deleted or does not exist at all.",
+  "failedLoadArticles": "Oh! Failed to load articles...",
+  "articlesPageError": "Check your network connection.",
   "comments": "Comments",
   "noComments": "No comments",
   "textComment": "Enter comment text",
