add scroll-recovery for page, hooks use-throttle-fn and use-clipboard

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -10,5 +10,7 @@
   "textComment": "Enter comment text",
   "send": "Send",
   "read": "Read more...",
-  "back": "Back"
+  "back": "Back",
+  "copied": "Copied!",
+  "copy": "Copy"
 }
