--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -10,5 +10,7 @@
   "textComment": "Введите текст комментария",
   "send": "Отправить",
   "read": "Читать далее...",
-  "back": "Назад"
+  "back": "Назад",
+  "copied": "Скопировано!",
+  "copy": "Копировать"
 }
