--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -12,5 +12,17 @@
   "read": "Читать далее...",
   "back": "Назад",
   "copied": "Скопировано!",
-  "copy": "Копировать"
+  "copy": "Копировать",
+  "sortBy": "Сортировать по",
+  "search": "Поиск",
+  "asc": "возрастанию",
+  "desc": "убыванию",
+  "title": "названию",
+  "views": "просмотру",
+  "createdAt": "дате",
+  "all": "Все",
+  "it": "ИТ",
+  "science": "Наука",
+  "economics": "Экономика",
+  "articlesNotFound": "Статьи не найдены!"
 }
