add recommendations for article

--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -24,5 +24,6 @@
   "it": "It",
   "science": "Science",
   "economics": "Economics",
-  "articlesNotFound": "Articles not found!"
+  "articlesNotFound": "Articles not found!",
+  "recommendations": "Recommended"
 }
