--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -24,5 +24,6 @@
   "it": "ИТ",
   "science": "Наука",
   "economics": "Экономика",
-  "articlesNotFound": "Статьи не найдены!"
+  "articlesNotFound": "Статьи не найдены!",
+  "recommendations": "Рекомендуем"
 }
