--- a/public/locales/en/article.json
+++ b/public/locales/en/article.json
@@ -25,5 +25,6 @@
   "science": "Science",
   "economics": "Economics",
   "articlesNotFound": "Articles not found!",
-  "recommendations": "Recommended"
+  "recommendations": "Recommended",
+  "categories": "Categories"
 }
