--- a/public/locales/ru/article.json
+++ b/public/locales/ru/article.json
@@ -25,5 +25,6 @@
   "science": "Наука",
   "economics": "Экономика",
   "articlesNotFound": "Статьи не найдены!",
-  "recommendations": "Рекомендуем"
+  "recommendations": "Рекомендуем",
+  "categories": "Категории"
 }
