--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -9,5 +9,6 @@
   "errorPage": "Упс! Что-то пошло не так...",
   "refreshPage": "Обновить страницу",
   "login": "Войти",
-  "logout": "Выйти"
+  "logout": "Выйти",
+  "hotAccess": "У вас нет доступа к этой странице"
 }
